--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "Firestore"
+        "firebaseapp",
+        "firebasestorage",
+        "Firestore",
+        "ringoffire"
     ]
 }
